--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
+    "mcp": "node src/mcp-server.js",
     "dev": "nodemon src/index.js",
     "test": "jest"
   },
