Update package.json to version 1.0.1, change main entry point to src/mcp-server.js, modify test script to allow passing with no tests, and enhance postinstall message with updated command for latest version.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "cursor-agent-mcp",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Production-ready MCP server for Cursor Background Agents API - enables LLMs to create, manage, and interact with Cursor's autonomous coding agents",
-  "main": "src/index.js",
+  "main": "src/mcp-server.js",
   "type": "module",
   "bin": {
-    "cursor-agent-mcp": "src/index.js"
+    "cursor-agent-mcp": "src/mcp-server.js"
   },
   "scripts": {
     "start": "node src/index.js",
     "mcp": "node src/mcp-server.js",
     "dev": "nodemon src/index.js",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "prepublishOnly": "npm test",
-    "postinstall": "echo '\n🚀 Cursor MCP Server installed successfully!\n\nNext steps:\n1. Get your Cursor API key from Settings → Features → Background Agents\n2. Add to your MCP client config:\n\n{\n  \"mcpServers\": {\n    \"cursor-agents\": {\n      \"command\": \"npx\",\n      \"args\": [\"cursor-mcp-server\"],\n      \"env\": {\n        \"CURSOR_API_KEY\": \"your_api_key_here\"\n      }\n    }\n  }\n}\n\n📚 Full documentation: https://github.com/griffinwork40/cursor-mcp#readme\n'"
+    "postinstall": "echo '\n🚀 Cursor MCP Server installed successfully!\n\nNext steps:\n1. Get your Cursor API key from Settings → Features → Background Agents\n2. Add to your MCP client config:\n\n{\n  \"mcpServers\": {\n    \"cursor-agents\": {\n      \"command\": \"npx\",\n      \"args\": [\"cursor-agent-mcp@latest\"],\n      \"env\": {\n        \"CURSOR_API_KEY\": \"your_api_key_here\"\n      }\n    }\n  }\n}\n\n📚 Full documentation: https://github.com/griffinwork40/cursor-mcp#readme\n'"
   },
   "keywords": [
     "mcp",
