--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "src/mcp-server.js",
   "type": "module",
   "bin": {
-    "cursor-agent-mcp": "src/mcp-server.js"
+    "cursor-agent-mcp": "src/cli.js"
   },
   "scripts": {
     "start": "node src/index.js",
     "mcp": "node src/mcp-server.js",
+    "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
     "test": "jest --passWithNoTests",
     "prepublishOnly": "npm test",
@@ -60,7 +61,8 @@
     "express": "^4.18.2",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
