--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,31 @@ jobs:
         
       - name: Run linting
         run: npm run lint
-        
+
+      - name: Start MCP server
+        env:
+          CURSOR_API_KEY: fake-ci-key
+        run: |
+          npm start &
+          echo $! > server.pid
+          npx wait-on@7 http://localhost:3000/health
+
       - name: Test MCP client integration
+        env:
+          CURSOR_API_KEY: fake-ci-key
         run: node test-mcp-client.js
-        
+
       - name: Test error handling
+        env:
+          CURSOR_API_KEY: fake-ci-key
         run: node test-error-handling.js
+
+      - name: Stop MCP server
+        if: always()
+        run: |
+          if [ -f server.pid ]; then
+            kill $(cat server.pid)
+          fi
 
   security:
     runs-on: ubuntu-latest
