Add Jest configuration and setup files for improved testing experience
- Introduced jest.config.js to define test environment, coverage settings, and test match patterns.
- Added jest.setup.js to suppress console.error during tests, reducing noise in test outputs.
- Updated package.json to include experimental VM modules for Jest execution.
- Created comprehensive test files for error handling and token utilities, ensuring robust coverage of functionalities.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mcp": "node src/mcp-server.js",
     "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --passWithNoTests",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules\" jest --passWithNoTests",
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
