--- a/package.json
+++ b/package.json
@@ -60,14 +60,15 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.18.1",
-    "express": "^4.18.2",
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "eslint": "^8.57.0"
+    "nodemon": "^3.0.1",
+    "supertest": "^7.1.4"
   }
 }
