--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,39 +102,69 @@ jobs:
     name: 🔗 Integration Tests
     runs-on: ubuntu-latest
     needs: [unit-tests, code-quality]
-    
+
     steps:
     - name: 📥 Checkout code
       uses: actions/checkout@v4
-    
+
     - name: 🔧 Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
         cache: 'npm'
-    
+
     - name: 📦 Install dependencies
       run: npm ci
-    
+
+    - name: 🚀 Start MCP server
+      run: |
+        npm start &
+        SERVER_PID=$!
+        echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
+
+        for i in {1..30}; do
+          if curl -sSf http://localhost:3000/health > /dev/null; then
+            echo '✅ MCP server is ready'
+            break
+          fi
+          echo '⏳ Waiting for MCP server to become ready...'
+          sleep 2
+        done
+
+        if ! curl -sSf http://localhost:3000/health > /dev/null; then
+          echo '❌ MCP server failed to start'
+          exit 1
+        fi
+
     - name: 🔌 Test MCP client integration
+      env:
+        CI: 'true'
       run: |
         echo "Testing MCP client integration..."
-        # Note: This would require CURSOR_API_KEY for full testing
-        # For now, we'll just verify the client can start
-        timeout 10s node test-mcp-client.js || echo "MCP client test completed"
-    
+        node test-mcp-client.js --ci
+
     - name: 🚨 Test error handling
       run: |
         echo "Testing error handling..."
         node test-error-handling.js
-    
+
     - name: 🌐 Test curl examples
       run: |
         echo "Testing curl examples..."
         # Make scripts executable
         chmod +x test-curl-examples.sh
         # Run a subset of tests that don't require API key
-        bash -c 'timeout 30s bash test-curl-examples.sh || echo "Curl tests completed"'
+        bash -c 'timeout 30s bash test-curl-examples.sh'
+
+    - name: 🛑 Stop MCP server
+      if: always()
+      run: |
+        if [[ -n "${SERVER_PID}" && "${SERVER_PID}" =~ ^[0-9]+$ ]]; then
+          if kill -0 "${SERVER_PID}" 2>/dev/null; then
+            kill "${SERVER_PID}" || true
+            wait "${SERVER_PID}" || true
+          fi
+        fi
 
   build-verification:
     name: 🏗️ Build Verification
@@ -182,14 +212,14 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "| Stage | Status |" >> $GITHUB_STEP_SUMMARY
         echo "|-------|--------|" >> $GITHUB_STEP_SUMMARY
-        echo "| 🧪 Unit Tests | ${{ needs.unit-tests.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-        echo "| 🔍 Code Quality | ${{ needs.code-quality.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-        echo "| 🛡️ Security Audit | ${{ needs.security-audit.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-        echo "| 🔗 Integration Tests | ${{ needs.integration-tests.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-        echo "| 🏗️ Build Verification | ${{ needs.build-verification.result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| 🧪 Unit Tests | ${{ needs['unit-tests'].result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| 🔍 Code Quality | ${{ needs['code-quality'].result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| 🛡️ Security Audit | ${{ needs['security-audit'].result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| 🔗 Integration Tests | ${{ needs['integration-tests'].result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| 🏗️ Build Verification | ${{ needs['build-verification'].result == 'success' && '✅ Passed' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        
-        if [[ "${{ needs.unit-tests.result }}" == "success" && "${{ needs.code-quality.result }}" == "success" && "${{ needs.security-audit.result }}" == "success" && "${{ needs.integration-tests.result }}" == "success" && "${{ needs.build-verification.result }}" == "success" ]]; then
+
+        if [[ "${{ needs['unit-tests'].result }}" == "success" && "${{ needs['code-quality'].result }}" == "success" && "${{ needs['security-audit'].result }}" == "success" && "${{ needs['integration-tests'].result }}" == "success" && "${{ needs['build-verification'].result }}" == "success" ]]; then
           echo "🎉 All checks passed! Ready for merge." >> $GITHUB_STEP_SUMMARY
         else
           echo "⚠️ Some checks failed. Please review and fix before merging." >> $GITHUB_STEP_SUMMARY
