--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
   security-audit:
     name: 🛡️ Security Audit
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: 📥 Checkout code
       uses: actions/checkout@v4
@@ -85,21 +85,28 @@ jobs:
     
     - name: 🔒 Run security audit
       run: npm audit --audit-level=moderate
-    
+
     - name: ⚠️ Check for high-severity vulnerabilities
       run: |
-        if npm audit --audit-level=high --json | jq -e '.vulnerabilities | length > 0' > /dev/null; then
-          echo "❌ High severity vulnerabilities found"
-          npm audit --audit-level=high
-          exit 1
-        else
+        echo "🔍 Checking for high severity vulnerabilities..."
+        REPORT_FILE="$(mktemp)"
+
+        if npm audit --audit-level=high --json >"${REPORT_FILE}"; then
           echo "✅ No high severity vulnerabilities found"
+          rm -f "${REPORT_FILE}"
+        else
+          echo "❌ High severity vulnerabilities found"
+          cat "${REPORT_FILE}"
+          rm -f "${REPORT_FILE}"
+          exit 1
         fi
 
   integration-tests:
     name: 🔗 Integration Tests
     runs-on: ubuntu-latest
     needs: [unit-tests, code-quality]
+    env:
+      CURSOR_API_KEY: ${{ secrets.CURSOR_API_KEY }}
 
     steps:
     - name: 📥 Checkout code
@@ -116,6 +123,11 @@ jobs:
 
     - name: 🚀 Start MCP server
       run: |
+        if [ -z "${CURSOR_API_KEY}" ]; then
+          echo "::error::CURSOR_API_KEY secret is not configured for integration tests."
+          exit 1
+        fi
+
         npm start &
         SERVER_PID=$!
         echo "SERVER_PID=$SERVER_PID" >> $GITHUB_ENV
