Improve CI workflow for CLI and MCP server tests
- Increased timeout for CLI and MCP server tests from 5s to 10s to reduce false negatives.
- Added success and failure messages for better clarity on test outcomes.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -198,17 +198,25 @@ jobs:
     - name: 🔨 Verify build
       run: |
         echo "Verifying package build..."
-        npm run prepublishOnly || echo "Pre-publish checks completed"
+        npm run prepublishOnly
     
     - name: 💻 Test CLI
       run: |
         echo "Testing CLI interface..."
-        timeout 5s npm run cli || echo "CLI test completed"
+        timeout 10s npm run cli || {
+          echo "❌ CLI test failed or timed out"
+          exit 1
+        }
+        echo "✅ CLI test completed successfully"
     
     - name: 🖥️ Test MCP server
       run: |
         echo "Testing MCP server startup..."
-        timeout 5s npm run mcp || echo "MCP server test completed"
+        timeout 10s npm run mcp || {
+          echo "❌ MCP server test failed or timed out"
+          exit 1
+        }
+        echo "✅ MCP server test completed successfully"
 
   pipeline-summary:
     name: 📋 Pipeline Summary
