Fix GitHub Actions status check names to match branch protection rules
- Rename '🧪 Unit Tests' job to 'test'
- Rename '🔍 Code Quality' job to 'lint'
- This should resolve 'Expected - Waiting for status to be reported' issue

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   # Code Quality & Testing
   unit-tests:
-    name: 🧪 Unit Tests
+    name: test
     runs-on: ubuntu-latest
     
     strategy:
@@ -44,7 +44,7 @@ jobs:
           test-results/
 
   code-quality:
-    name: 🔍 Code Quality
+    name: lint
     runs-on: ubuntu-latest
     
     steps:
