--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mcp": "node src/mcp-server.js",
     "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --passWithNoTests",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --passWithNoTests",
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
