Align Jest scripts with ESM tests

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "mcp": "node src/mcp-server.js",
     "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --passWithNoTests",
-    "test:coverage": "jest --coverage --passWithNoTests",
-    "test:config": "jest src/config/index.test.js --coverage",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --passWithNoTests",
+    "test:coverage": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage --passWithNoTests",
+    "test:config": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js src/config/index.test.js --coverage",
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
