Update .env.example with new token configuration and adjust package dependencies
- Added TOKEN_SECRET and TOKEN_TTL_DAYS to .env.example for enhanced security.
- Updated @babel/preset-typescript version in package.json and package-lock.json for compatibility improvements.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,9 @@ PORT=3000
 # Cursor API configuration
 CURSOR_API_KEY=your_cursor_api_key_here
 CURSOR_API_URL=https://api.cursor.com
+
+# Token Secret
+TOKEN_SECRET=your_token_secret_here
+
+# Token TTL Days
+TOKEN_TTL_DAYS=30
