--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
-    "postinstall": "echo '\n🚀 Cursor MCP Server installed successfully!\n\nNext steps:\n1. Get your Cursor API key from Settings → Features → Background Agents\n2. Add to your MCP client config:\n\n{\n  \"mcpServers\": {\n    \"cursor-agents\": {\n      \"command\": \"npx\",\n      \"args\": [\"cursor-agent-mcp@latest\"],\n      \"env\": {\n        \"CURSOR_API_KEY\": \"your_api_key_here\"\n      }\n    }\n  }\n}\n\n📚 Full documentation: https://github.com/griffinwork40/cursor-agent-mcp#readme\n'"
+    "postinstall": "echo '\n\ud83d\ude80 Cursor MCP Server installed successfully!\n\nNext steps:\n1. Get your Cursor API key from Settings \u2192 Features \u2192 Background Agents\n2. Add to your MCP client config:\n\n{\n  \"mcpServers\": {\n    \"cursor-agents\": {\n      \"command\": \"node\",\n      \"args\": [\"./node_modules/cursor-agent-mcp/src/index.js\"],\n      \"env\": {\n        \"CURSOR_API_KEY\": \"your_api_key_here\"\n      }\n    }\n  }\n}\n\nOne-off run:\nnpx --yes --package cursor-agent-mcp node ./node_modules/cursor-agent-mcp/src/index.js\n\n\ud83d\udcda Full documentation: https://github.com/griffinwork40/cursor-agent-mcp#readme\n'"
   },
   "keywords": [
     "mcp",
