Call Jest entry point in npm scripts

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "mcp": "node src/mcp-server.js",
     "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest --passWithNoTests",
-    "test:cli": "node --experimental-vm-modules node_modules/.bin/jest src/cli.test.js",
-    "test:coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --passWithNoTests",
+    "test:cli": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js src/cli.test.js",
+    "test:coverage": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage",
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
