--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "mcp": "node src/mcp-server.js",
     "cli": "node src/cli.js",
     "dev": "nodemon src/index.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --passWithNoTests",
     "lint": "eslint src/ --fix",
     "lint:check": "eslint src/",
     "prepublishOnly": "npm test && npm run lint:check",
@@ -69,11 +69,10 @@
     "@babel/core": "^7.28.4",
     "@babel/preset-env": "^7.28.3",
     "@jest/globals": "^29.7.0",
-    "babel-jest": "^29.7.0",
     "@babel/preset-typescript": "^7.27.1",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
-    "babel-jest": "^30.1.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
